--- a/cookbooks/mconf-live/templates/default/bigbluebutton.yml.erb
+++ b/cookbooks/mconf-live/templates/default/bigbluebutton.yml.erb
@@ -1,3 +1,4 @@
+scripts_dir: /usr/local/bigbluebutton/core/scripts
 recording_dir: /var/bigbluebutton/recording
 published_dir: /var/bigbluebutton/published
 raw_audio_src: /var/freeswitch/meetings
@@ -7,3 +8,4 @@ raw_presentation_src: /var/bigbluebutton
 redis_host: 127.0.0.1
 redis_port: 6379
 playback_host: <%= node[:bbb][:server_addr] %>
+
