fixed the mconf.yml definition, now the get_recordings_url is always an array, this way the mconf-decrypt won't fail

--- a/cookbooks/mconf-live/templates/default/mconf.yml.erb
+++ b/cookbooks/mconf-live/templates/default/mconf.yml.erb
@@ -1,3 +1,3 @@
-get_recordings_url: <% if @get_recordings_url.respond_to? "join" -%>[ <%= @get_recordings_url.join(", ") %> ]<% else -%><%= @get_recordings_url %><% end -%>
+get_recordings_url: [ <% if @get_recordings_url.respond_to? "join" -%><%= @get_recordings_url.join(", ") %><% else -%><%= @get_recordings_url %><% end -%> ]
 private_key: <%= @private_key %>
 
