--- a/cookbooks/bigbluebutton/templates/default/conference.conf.xml.erb
+++ b/cookbooks/bigbluebutton/templates/default/conference.conf.xml.erb
@@ -77,12 +77,12 @@
       <!-- File to play endlessly (nobody will ever be able to talk) -->
       <!--<param name="perpetual-sound" value="perpetual.wav"/>-->
       <!-- File to play when you're alone (music on hold)-->
-<!--
       <param name="moh-sound" value="$${hold_music}"/>
+      <!-- File to play when you join the conference -->
       <param name="enter-sound" value="tone_stream://%(200,0,500,600,700)"/>
+      <!-- File to play when you leave the conference -->
       <param name="exit-sound" value="tone_stream://%(500,0,300,200,100,50,25)"/>
--->
-      <!-- File to play when you ae ejected from the conference -->
+      <!-- File to play when you are ejected from the conference -->
       <param name="kicked-sound" value="conference/conf-kicked.wav"/>
       <!-- File to play when the conference is locked -->
       <param name="locked-sound" value="conference/conf-locked.wav"/>
