--- a/cookbooks/apt/templates/default/01proxy.erb
+++ b/cookbooks/apt/templates/default/01proxy.erb
@@ -1,2 +1,5 @@
-Acquire::http::Proxy "http://<%= @proxy %>:3142";
+Acquire::http::Proxy "http://<%= @proxy %>:<%= @port %>";
 Acquire::https::Proxy "DIRECT";
+<% @bypass.each do |bypass, type| %>
+Acquire::<%= type %>::Proxy::<%= bypass %> "DIRECT";
+<% end %>
