--- a/cookbooks/mconf-lb/templates/default/monit-config.erb
+++ b/cookbooks/mconf-lb/templates/default/monit-config.erb
@@ -16,6 +16,6 @@ check process mconflb with pidfile "/var/run/mconf-lb.pid"
     if failed port 3000 protocol HTTP
         request /ping
         with timeout 30 seconds
-        then exec /bin/bash -c 'echo "[`date -u +%Y-%m-%dT%T.%3NZ`] (monit) HTTP failed, might restart it soon" >> /var/www/mconf-lb/current/log/production.log'
+        then exec /bin/bash -c 'echo "[`date -u +%Y-%m-%dT%T.%3NZ`] (monit) HTTP failed, might restart it soon" >> <%= node["mconf-lb"]["deploy_to"] %>/current/log/production.log'
     if 5 restarts within 5 cycles
-        then exec /bin/bash -c 'echo "[`date -u +%Y-%m-%dT%T.%3NZ`] (monit) Too many restarts, might timeout it soon" >> /var/www/mconf-lb/current/log/production.log'
+        then exec /bin/bash -c 'echo "[`date -u +%Y-%m-%dT%T.%3NZ`] (monit) Too many restarts, might timeout it soon" >> <%= node["mconf-lb"]["deploy_to"] %>/current/log/production.log'
