--- a/cookbooks/mconf-lb/templates/default/nginx-site.erb
+++ b/cookbooks/mconf-lb/templates/default/nginx-site.erb
@@ -8,7 +8,7 @@ upstream mconf-lb {
 server {
   listen 80;
   server_name <%= @domain %>;
-  root /var/www/mconf-lb/current/public;
+  root <%= node["mconf-lb"]["deploy_to"] %>/current/public;
 
   gzip on;
   gzip_disable "msie6";
