updating config.xml

--- a/cookbooks/mconf-live/templates/default/config.xml.erb
+++ b/cookbooks/mconf-live/templates/default/config.xml.erb
@@ -1,7 +1,7 @@
 <?xml version="1.0" ?>
 <config>
     <localeversion suppressWarning="false">0.8</localeversion>
-    <version><%= node[:mconf][:live][:version] %><% if @streaming -%> - Webinar<% end -%></version>
+    <version><%= @module_version %></version>
     <help url="<%= node[:bbb][:server_url] %>/help.html"/>
     <javaTest url="<%= node[:bbb][:server_url] %>/testjava.html"/>
     <porttest host="<%= node[:bbb][:server_domain] %>" application="video/portTest" timeout="10000"/>    
@@ -11,7 +11,7 @@
     <skinning enabled="true" url="<%= node[:bbb][:server_url] %>/client/branding/css/BBBDefault.css.swf" />
     <branding logo="<%= @logo %>" copyright="<%= @copyright_message %>" background="<%= @background %>" />
     <shortcutKeys showButton="true" />
-    <layout showLogButton="false" showVideoLayout="false" showResetLayout="false" defaultLayout="<% if not @streaming -%>Default<% else -%>Webinar<% end -%>"
+    <layout showLogButton="false" showVideoLayout="false" showResetLayout="false" defaultLayout="Default"
             showToolbar="true" showFooter="true" showMeetingName="true" showHelpButton="true" 
             showLogoutWindow="true" showLayoutTools="true" showNetworkMonitor="true" confirmLogout="true"/>
             
@@ -49,7 +49,7 @@
 			uri="rtmp://<%= node[:bbb][:server_domain] %>/sip" 
 			autoJoin="false"
 			listenOnlyMode="true"
-			presenterShareOnly="<%= @streaming %>"
+			presenterShareOnly="false"
 			skipCheck="false"
 			showButton="true"
 			showSpeakerButton="false"
@@ -61,7 +61,7 @@
 		<module name="VideoconfModule" url="<%= node[:bbb][:server_url] %>/client/VideoconfModule.swf?v=<%= @module_version %>" 
 			uri="rtmp://<%= node[:bbb][:server_domain] %>/video"
 			dependson = "UsersModule"
-			presenterShareOnly = "<%= @streaming %>"
+			presenterShareOnly = "false"
 			controlsForPresenter = "false"
 			autoStart = "false"
 			skipCamSettingsCheck="false"
@@ -78,7 +78,8 @@
 			displayAvatar = "false"
 			focusTalking = "false"
 			glowColor = "0x4A931D"
-			glowBlurSize = "30.0"	
+			glowBlurSize = "30.0"
+			priorityRatio = "0.67"
 		/>
 		
 		<module name="WhiteboardModule" url="<%= node[:bbb][:server_url] %>/client/WhiteboardModule.swf?v=4105" 
@@ -102,19 +103,14 @@
 
 		<module name="LayoutModule" url="<%= node[:bbb][:server_url] %>/client/LayoutModule.swf?v=<%= @module_version %>"
 			uri="rtmp://<%= node[:bbb][:server_domain] %>/bigbluebutton"
-			<% if not @streaming -%>
 			layoutConfig="<%= node[:bbb][:server_url] %>/client/conf/layout.xml"
-			<% else -%>
-			layoutConfig="<%= node[:bbb][:server_url] %>/client/conf/layout-streaming.xml"
-			<% end -%>
 			enableEdit="true"
 		/>
 
 		<module name="SharedNotesModule" url="SharedNotesModule.swf?v=<%= @module_version %>" 
 			uri="rtmp://<%= node[:bbb][:server_domain] %>/bigbluebutton"
 			refreshDelay="500"
-			autoStart="true"
-			showButton="false"
+			enableMultipleNotes="true"
 			dependsOn="UsersModule"
 			position="bottom-left"
 		/>
