fixed the name of mconf-decrypter.yml.erb; fixed the template definition; fixed the path to the recording key pair; removed the streaming flag from config.xml; using again config.xml.erb as template for config.xml; fixed performance_report.py that was reporting always CRITICAL for the network metric; removed the notes server metric

--- a/cookbooks/mconf-live/templates/default/config.xml.erb
+++ b/cookbooks/mconf-live/templates/default/config.xml.erb
@@ -54,7 +54,7 @@
 			showButton="true"
 			showSpeakerButton="false"
 			enabledEchoCancel="true"
-			useWebrtcIfAvailable="true"
+			useWebrtcIfAvailable="false"
 			dependsOn="UsersModule"
 		/>
 
