remove old mconf_encrypted recordings automatically

--- a/cookbooks/bigbluebutton/templates/default/bigbluebutton.erb
+++ b/cookbooks/bigbluebutton/templates/default/bigbluebutton.erb
@@ -49,6 +49,17 @@ find /var/freeswitch/meetings/ -name "*.wav" -mtime +$history -exec rm '{}' \;
 # Delete old log files
 #
 find /var/log/bigbluebutton -name '*.log*' -mtime +15 -exec rm -r '{}' \;
+find /opt/freeswitch/log -name '*.log*' -mtime +15 -exec rm -r '{}' \;
+
+#
+# Remove old encrypted recordings (wait 15 days for them to be downloaded by the recording server and processed)
+#
+if [ -d /var/bigbluebutton/published/mconf_encrypted/ ]; then
+    find /var/bigbluebutton/published/mconf_encrypted/ -maxdepth 1 -type d -name "*-*" -mtime +15 -exec rm -rf '{}' \;
+fi
+if [ -d /var/bigbluebutton/unpublished/mconf_encrypted/ ]; then
+    find /var/bigbluebutton/unpublished/mconf_encrypted/ -maxdepth 1 -type d -name "*-*" -mtime +15 -exec rm -rf '{}' \;
+fi
 
 #
 # Delete old raw dirs from recordings properly published using 'presentation' scripts.
