--- a/cookbooks/bigbluebutton/templates/default/bigbluebutton.erb
+++ b/cookbooks/bigbluebutton/templates/default/bigbluebutton.erb
@@ -64,6 +64,7 @@ fi
 #
 # Delete old raw dirs from recordings properly published using 'presentation' scripts.
 #
+
 remove_raw_of_published_recordings(){
     #TYPES=$(cd /usr/local/bigbluebutton/core/scripts/process; ls *.rb | sed s/.rb//g)
     logger "Removing raw directory of old recordings:"
@@ -92,4 +93,10 @@ remove_raw_of_published_recordings(){
 }
 
 #remove_raw_of_published_recordings
+
+#
+# Remove old *.afm and *.pfb files from /tmp directory (these were created by Ghostscript)
+#
+find /tmp -name "*.afm" -mtime +10 -exec rm '{}' \;
+find /tmp -name "*.pfb" -mtime +10 -exec rm '{}' \;
 
