fixed the mconf recording decrypter yml format when there's no get_recordings_url

--- a/cookbooks/mconf-live/templates/default/mconf-decrypter.yml.erb
+++ b/cookbooks/mconf-live/templates/default/mconf-decrypter.yml.erb
@@ -1,3 +1,7 @@
+<% if @get_recordings_url.nil? or @get_recordings_url.empty? -%>
+get_recordings_url: []
+<% else -%>
 get_recordings_url: [ <% if @get_recordings_url.respond_to? "map" -%><%= @get_recordings_url.map{ |s| "'#{s}'" }.join(", ") %><% else -%><%= "'#{@get_recordings_url}'" %><% end -%> ]
+<% end -%>
 private_key: <%= @private_key %>
 
