Update cookbooks 'mconf-lb' and 'mconf-web'

--- a/cookbooks/mconf-lb/templates/default/logrotate-config.erb
+++ b/cookbooks/mconf-lb/templates/default/logrotate-config.erb
@@ -5,4 +5,5 @@
          compress
          missingok
          notifempty
+         su <%= node["mconf"]["user"] %> <%= node["mconf"]["app_group"] %>
 }
